[package]
name = "nix-cache-cut"
description = "Trim Nix binary caches according to gcroots"
version = "1.0.0"
authors = ["Astro <astro@spaceboyz.net>"]
edition = "2021"
license = "MIT"
homepage = "https://github.com/astro/nix-cache-cut"
repository = "https://github.com/astro/nix-cache-cut.git"
documentation = "https://docs.rs/nix-cache-cut"

[dependencies]
clap = "4"
walkdir = "2"
indicatif = "0.17"
